Don't allow "wgconfig add peer ..." to accept invalid options.

Addresses PR bin/57392 .